syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "QueryProtocolGrpc";
option java_package = "io.prestosql.plugin.grpc";

service QueryService {
    rpc Query (QueryRequest) returns (stream Page);
    rpc GetTables (google.protobuf.Empty) returns (TableMetadataResponse);
    rpc GetCount (CountRequest) returns (CountResponse);
    rpc GetIndex (IndexRequest) returns (stream Page);
}

message CountRequest {
    int32 tableId = 1;
    string filter = 2;
}

message CountResponse {
    int64 count = 1;
}

//A page contains a subset of the result of a query
message Page {
    //Contains all the column data that was requested
    Columns columns = 1;

    //Contains string values
    repeated StringColumn strings = 2;

    //Contains object values
    repeated ObjectColumn objects = 3;

    //The row count returned
    uint32 rowCount = 4;
}

message Columns {
    repeated Block blocks = 1;
}

message Block {
    //An array of null values for this block, each value is an index
    //This array should always be checked during reading to see if a null value
    //should be written instead of taken from a block.
    repeated uint32 nulls = 1;
    oneof block {
     // Primitives
     DoubleBlock doubles = 2; 
     FloatBlock floats = 3; 
     Int32Block ints = 4; 
     Int64Block longs = 5; 
     BoolBlock bools = 6; 
     TimestampBlock timestamps = 7;

     // References
     ObjectRefBlock objects = 8;
     StringRefBlock strings = 9;

     //Array
     ArrayBlock arrays = 10;
	}
}

/*
    START: PRIMITIVE BLOCKS
*/
message DoubleBlock {
    repeated double values = 1;
}

message FloatBlock {
    repeated float values = 1;
}

message Int32Block {
    repeated int32 values = 1;
}

message Int64Block {
    repeated int64 values = 1;
}

message BoolBlock {
    repeated bool values = 1;
}

message TimestampBlock {
    repeated google.protobuf.Timestamp values = 1;
}
/*
    END: PRIMITIVE BLOCKS
*/

/*
    START: REFERENCE BLOCKS
*/
message ObjectRefBlock {
    repeated uint32 values = 1;
}

message StringRefBlock {
    repeated uint32 stringId = 1;
}
/*
    END: REFERENCE BLOCKS
*/

/*
    START: ARRAY
*/
message ArrayBlock {
    repeated uint32 size = 1;
    Block values = 2;
}
/*
    END: ARRAY
*/


/*
    START: STRINGS
*/
message StringColumn {
    //The column Id that these strings belong to
    uint32 columnId = 1;

    //The strings themselves
    repeated string strings = 2;
    
    //Boolean that marks if the previous strings should be forgotten
    //This happens when too many unique strings exist
    bool clearPrevious = 3;
}
/*
    END: STRINGS
*/

/*
    START: OBJECTS
*/
message Objects {
    //All columns that have an object value exist here
    repeated ObjectColumn columns = 1;
}

message ObjectColumn {
    //The column Id that these objects belong to
    uint32 columnId = 1;

    //The objects themselves
    Columns objects = 2;
    
    //Boolean that marks if the previous objects should be forgotten
    //This happens when too many unique objects exist
    bool clearPrevious = 3;

    //How many objects are in this column
    uint32 count = 4;
}
/*
    END: OBJECTS
*/

/*
    START: QUERY REQUEST
*/
message QueryRequest {
    int32 tableId = 1;
    int32 maxBatchSize = 2;
    ColumnSelect select = 3;
    int32 limit = 4;
    int32 skip = 5;
    string filter = 6;
    repeated Sort orderby = 7;
}

message Sort {
    int32 columnId = 1;
    bool descending = 2;
}

message ColumnSelect {
    repeated int32 selectColumns = 1;
    repeated ObjectColumnSelect objects = 2;
    repeated ArrayColumnSelect arrays = 3;
}

message ObjectColumnSelect {
    int32 columnId = 1;
    ColumnSelect selects = 2;
}

message ArrayColumnSelect {
    int32 columnId = 1;
    ColumnSelect selects = 2;
}
/*
    END: QUERY REQUEST
*/

/*
    START: INDEX REQUEST
*/
message IndexRequest {
    int32  tableId = 1;
    int32 indexId = 2;
    int32 maxBatchSize = 3;
    ColumnSelect select = 4;
    Page records = 5;
    //Limit per record how many results should be given
    //int32 limit = 6;

    //Should the first amount of elements be skipped, and how many
    //int32 skip = 7;

    //Should the total count be included?
    //This is the count before taking the limit
    //bool includeCount = 8;
}
/*
    END: INDEX REQUEST
*/

/*
    START: METADATA
*/
enum PrestoType {
    DOUBLE = 0;
    FLOAT = 1;
    INT32 = 2;
    INT64 = 3;
    BOOL = 4;
    STRING = 5;
    TIMESTAMP = 6;
    OBJECT = 7;
    ARRAY = 8;
}

message TableMetadata {
    SchemaTableName schemaTableName = 1;
    repeated ColumnMetadata columns = 2;
    int32 tableId = 3;
    repeated IndexMetadata indicies = 4;
}

message IndexMetadata {
    int32 indexId = 1;
    repeated ColumnMetadata columns = 2;
    string name = 3;
}

message SchemaTableName {
  string schemaName = 1;
  string tableName = 2;
}

message ColumnMetadata {
    string name = 1;
    int32 columnId = 2;
    PrestoType type = 3;

     //If the column is in a sub object this is the parent column id
     //The column data will be under the parent column id
     //If it is an array, this will contain one column with the type that the array is in.
     repeated ColumnMetadata subColumns = 4;
}

message TableMetadataResponse {
    repeated TableMetadata tables = 1;
}

/*
    END: METADATA
*/